--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 measurementlaptop/edfFiles/*
 measurementlaptop/logfiles/*
+measurementlaptop/FixationPerformance/*
 local/
 Psychtoolbox-3
 DATA/
 images/*
 mortphing/DATA/
 **.DS_Store
+
+*_images.mat
 
 measurementlaptop_7T
 
